kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: casadelsabor
  namespace: casadelsabor
  labels:
    app.kubernetes.io/name: casadelsabor
spec:
  type: ClusterIP
  selector:
    app: casadelsabor
  ports:
    - name: http
      port: 8000
      targetPort: http
